GENERATOR_OUTPUT/manifests/kubeflow-tools/notebooks/jupyter-web-app/patches/patch-jupyter-web-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupyter-web-app-jupyter-web-app
  namespace: kubeflow
spec:
  gateways:
    - deploykf-istio-gateway/kubeflow-gateway
